--- a/css/tailless.css
+++ b/css/tailless.css
@@ -11,8 +11,10 @@ h1 {
 @import "./base.css";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+@import "./nav.css";
 @import "./containers.css";
 @import "./typography.css";
 @import "./form.css";
 @import "./lists.css";
+@import "./figures.css";
 
